--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@web3modal/ethereum": "2.6.2",
+    "@web3modal/react": "2.6.2",
+    "bootstrap": "^5.3.0",
+    "dotenv-expand": "^10.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.64.1",
     "typescript": "^4.9.5",
+    "viem": "^1.4.1",
+    "wagmi": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
